# OpenENV-MetaHackathon

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  app.py  client.py  inference.py  manual_exploration.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_baseline.py  validate-submission.sh  visualize_simulation.py
.claude/: settings.local.json
agents/: __init__.py  baseline.py
env/: __init__.py  environment.py  models.py  reward.py  simulation.py  tasks.py
server/: __init__.py  app.py  environment.py  graders.py  models.py  reward.py  simulation.py  tasks.py
