[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "crispr-editing-env"
version = "1.0.0"
description = "OpenEnv environment for CRISPR gene editing optimization"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0,<3.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "matplotlib",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "openai>=1.12.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = ["openenv-core"]
